<resources>
    <string name="app_name">Chat</string>
    <!-- Strings used for fragments for navigation -->

    <string name="email_hint">Email</string>
    <string name="login">Sign in</string>
    <string name="register">Register</string>
    <string name="password_hint">Password</string>
    <string name="email_error_text">Enter a valid email</string>
    <string name="password_error_text">Password length must be greater than equal to 8</string>

    <string name="last_seen_format" formatted="true">Active %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="save">Save</string>
    <string name="rotate">Rotate</string>
    <string name="discard">Discard</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="transition_shared_image">shared_image</string>
    <string name="transition_shared_profile_image">shared_profile_image</string>

    <string name="status_time_format" formatted="true">%s \u2022 %s</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->

    <string name="delete">Delete</string>
    <string name="chat_message_hint">Enter a message</string>
    <string name="update">Update</string>
    <string name="developer_info">Developer: Sachin Kumar</string>

    <string name="activity_label_audio_picker">Select audio</string>

    <string name="tab_text_received">Received</string>
    <string name="tab_text_sent">Sent</string>
    <string name="app_label_invitation">Invitation</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>

    <string name="title_activity_video_player">VideoPlayerActivity</string>

    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading</string>
    <string name="audio_message">Audio message</string>
    <string name="no_user_found">No user found</string>
    <string name="search_email_address">Search email address</string>

    <string name="notification_inbox_style_message_text" formatted="true">You have %d new messages</string>
    <string name="notification_inbox_style_message_summary" formatted="true">%d new messages</string>

    <string name="title_activity_chat">Chats</string>
    <string name="title_activity_invitation">Invites</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_settings">Settings</string>

    <string name="sign_in_to_continue">Sign in to continue!</string>
    <string name="welcome">Welcome,</string>
    <string name="new_user">"I\'m a new user, "</string>
    <string name="or">or</string>
    <string name="create_account">Create account,</string>
    <string name="sign_up_to_get_started">Sign up to get started!</string>
    <string name="full_name">Full name</string>
    <string name="congratulations">Congratulations!</string>
    <string name="text_continue">Continue</string>
    <string name="account_created_successfully">Account created successfully</string>

    <string name="pref_dark_mode_summary">Enable dark theme</string>
    <string name="pref_dark_mode_key">dark_mode</string>
    <string name="pref_dark_mode_theme">Dark mode</string>
    <string name="pref_about_app_title">About app</string>
    <string name="pref_about_app_key">about_app</string>
    <string name="general_header">General</string>
    <string name="no_invites">No invites</string>
    <string name="search_giphy">Search giphy</string>
    <string name="delete_conversation_message">Deleting conversation will delete all messages</string>
    <string name="delete_conversation_title">Delete conversation</string>
    <string name="notification_action_reply_hint_text">Enter a message</string>
    <string name="notification_action_reply">Reply</string>
    <string name="gif_loading_error">Please check your internet connection and try again</string>
    <string name="gif">GIF</string>
    <string name="sticker">Sticker</string>
    <string name="emoji">Emoji</string>
</resources>
