<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/gif_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/gif_loading_error"
        android:textSize="14sp"
        android:visibility="gone"
        tools:visibility="visible" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gif_grid_view"
        android:clipChildren="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:clipToPadding="false"
        android:paddingBottom="40dp" />

    <ProgressBar
        android:id="@+id/gif_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

    <FrameLayout
        style="@style/Widget.MaterialComponents.TabLayout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="bottom"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior">

        <LinearLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/gif"
                android:layout_width="64dp"
                android:layout_height="24dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/tab_selector"
                android:padding="0dp"
                android:text="@string/gif"
                android:textColor="@color/tab_text_color"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sticker"
                android:layout_width="72dp"
                android:layout_height="24dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/tab_selector"
                android:padding="0dp"
                android:text="@string/sticker"
                android:textAllCaps="false"
                android:textColor="@color/tab_text_color"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/emoji"
                android:layout_width="64dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/tab_selector"
                android:padding="0dp"
                android:text="@string/emoji"
                android:textAllCaps="false"
                android:textColor="@color/tab_text_color"
                android:textSize="12sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/search_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/gif_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/SearchView"
                app:defaultQueryHint="@string/search_giphy"
                app:searchIcon="@drawable/ic_search_gif" />
        </FrameLayout>
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>